Commit and psuh